--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Netting -- Patterns'
 - !lcc 'TT'
 - !lcsh 'Knitting -- Patterns'
+- GITenberg
 title: The Ladies' Knitting and Netting Book
 url: http://www.gutenberg.org/ebooks/33951
